--- a/css/styles.css
+++ b/css/styles.css
@@ -28,7 +28,7 @@ Parchment: #fefcf7;
   width: 100%;
   font-family: Gill Sans / Gill Sans MT, sans-serif;
   text-transform: uppercase;
-  background-color: #fefcf7;
+  background-color: #fffdfa;
   color: #242d33;
   border: 1px solid #242d33;
 }
@@ -55,7 +55,7 @@ body {
   font-family: sans-serif;
   color: #242d33;
   /*color: #584d45;*/
-  background-color: #fefcf7;
+  background-color: #fffdfa;
 }
 
 h1 {
@@ -168,14 +168,15 @@ a {
 
 .portfolio-item {
   width: 100%;
-  margin-bottom: 23px;
+  padding: 10%;
+  margin-bottom: 75px;
   position: relative;
   background-color: #242d33;
   opacity: .9;
+  overflow: hide;
 }
 
 .portfolio-item:hover {
-  display: table;
   opacity: 1;
   -webkit-transition: all 0.3s ease-in-out;
     -moz-transition: all 0.3s ease-in-out;
@@ -185,17 +186,20 @@ a {
 
 .portfolio-item img {
   width: 70%;
-  position: absolute;
+  margin: 10% 15%;
+  /*max-width: 260px;
+  margin: 15% 15%;*/
+  /*position: absolute;
   top: 25%;
   left: 50%;
-  transform: translate(-50%, -25%);
+  transform: translate(-50%, -25%);*/
   box-shadow: 2px 2px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 5px;
 }
 
 .item-label {
   position: absolute;
-  bottom: 0;
+  bottom: -50px;
   left: 0;
   width: 100%;
   height: 50px;
@@ -244,11 +248,11 @@ a {
   left: 0;
   width: 100%;
   height: 100%;
-  background-color: #fefcf7;
+  background-color: #fffdfa;
   border: 2px solid #ededed;
   color: #363636;
   opacity: 1;
-  padding: 7px 5px 5px 10px;
+  padding: 10%;
 }
 
 .vert-item {
@@ -259,15 +263,8 @@ a {
   height: 250px;
 }
 
-.stripe {
-  width: 2500px;
-  height: 150px;
-  background-color: #FFBC9E;
-  position: absolute;
-  bottom: 0;
-  right: -60%;
-  -webkit-transform: rotate(45deg);
-  z-index: -1;
+#contact-page {
+  display: none;
 }
 
 /* About Page Items */
@@ -292,16 +289,20 @@ a {
 }
 
 /* Media Queries */
-
+/* media query for all screens that are smaller than laptops */
 @media screen and (max-width: 976px) {
   .portfolio-item {
     opacity: 1;
   }
 
-  .stripe {
-    width: 1000px;
-    bottom: 50%;
-    right: -40%;
+  .about-main {
+    width: 90%;
+    margin: 0 auto;
+  }
+
+  .article {
+    width: 90%;
+    margin: 0 auto;
   }
 }
 
@@ -317,7 +318,7 @@ a {
   .col3 {
     width: 100%;
     float: none;
-    overflow: auto;
+    overflow: visible;;
   }
 
   .col3 .vert-item {
@@ -336,6 +337,10 @@ a {
     width: 1000px;
     bottom: 40%;
     right: -40%;
+  }
+
+  #contact {
+    margin-top: 30%;
   }
 }
 
@@ -382,11 +387,6 @@ a {
     margin: 0 auto;
   }
 
-  .stripe {
-    width: 1000px;
-    bottom: 55%;
-    right: -60%;
-  }
 }
 
 @media screen and (max-width: 350px) {
@@ -396,5 +396,20 @@ a {
 
   .horiz-item {
     max-height: 200px;
+  }
+}
+
+
+/* Fix nav display bug that occurs when resizing browser window*/
+@media screen and (min-width: 541px) {
+  .navlinks li {
+    display: inline;
+  }
+}
+
+/* Limit grid sizing on extra large screens */
+@media screen and (min-width: 1300px) {
+  .container {
+    max-width: 1333px;
   }
 }
