--- a/css/styles.css
+++ b/css/styles.css
@@ -185,16 +185,17 @@ a {
 }
 
 .portfolio-item img {
-  width: 70%;
-  margin: 10% 15%;
+  width: 100%;
+  /*width: 70%;
+  margin: 10% 15%;*/
   /*max-width: 260px;
   margin: 15% 15%;*/
   /*position: absolute;
   top: 25%;
   left: 50%;
   transform: translate(-50%, -25%);*/
-  box-shadow: 2px 2px 2px 1px rgba(0, 0, 0, 0.2);
-  border-radius: 5px;
+  /*box-shadow: 2px 2px 2px 1px rgba(0, 0, 0, 0.2);
+  border-radius: 5px;*/
 }
 
 .item-label {
@@ -256,11 +257,11 @@ a {
 }
 
 .vert-item {
-  height: 400px;
+  max-height: 400px;
 }
 
 .horiz-item {
-  height: 250px;
+  max-height: 250px;
 }
 
 #contact-page {
@@ -357,6 +358,7 @@ a {
   .nav {
     border: 0;
     background-color: rgba(255, 0, 0, 0);
+    margin-bottom: 50px;
   }
 
   .navlinks {
