--- a/css/styles.css
+++ b/css/styles.css
@@ -168,10 +168,9 @@ a {
 
 .portfolio-item {
   width: 100%;
-  padding: 10%;
   margin-bottom: 75px;
   position: relative;
-  background-color: #242d33;
+  background-color: #141414;
   opacity: .9;
   overflow: hide;
 }
@@ -200,11 +199,11 @@ a {
 
 .item-label {
   position: absolute;
-  bottom: -50px;
+  bottom: -40px;
   left: 0;
   width: 100%;
   height: 50px;
-  background-color: #363636;
+  background-color: #343450;
   border-top: 3px solid #fff;
   color: #fff;
   opacity: 1;
@@ -260,13 +259,13 @@ a {
   padding: 5%;
 }
 
-.vert-item {
+/*.vert-item {
   max-height: 400px;
 }
 
 .horiz-item {
   max-height: 400px;
-}
+}*/
 
 .horiz-item .item-info {
   font-size: .9em;
