--- a/css/styles.css
+++ b/css/styles.css
@@ -189,10 +189,10 @@ a {
 
 .item-label {
   position: absolute;
-  bottom: -40px;
+  bottom: -45px;
   left: 0;
   width: 100%;
-  height: 50px;
+  height: 60px;
   background-color: #191919;
   border-top: 3px solid #fff;
   color: #fff;
@@ -202,13 +202,17 @@ a {
 
 .item-label h1, .item-info h1 {
   font-family: sans-serif;
-  font-size: .8em;
-  margin: 0;
+  font-size: .9em;
+  margin: 1px 0 5px 0;
   padding: 0;
 }
 
 .item-info h1 {
   text-transform: uppercase;
+}
+
+.item-info p {
+  line-height: 1.3em;
 }
 
 .item-label p {
@@ -219,8 +223,9 @@ a {
 .item-x-toggle {
   font-size: 1.3em;
   position: absolute;
-  right: 20px;
-  bottom: 10px;
+  right: 7%;
+  bottom: 15px;
+  transition: all .25s ease-in-out;
 }
 
 .item-x-rotated {
@@ -258,7 +263,6 @@ a {
 }*/
 
 .horiz-item .item-info {
-  font-size: .9em;
   padding: 2%;
 }
 
@@ -313,19 +317,19 @@ a {
   .col3 {
     width: 100%;
     float: none;
-    overflow: visible;;
+    overflow: visible;
   }
 
   .col3 .vert-item {
-    float: left;
+    float: right;
     width: 48%;
-    margin: -8% 1% 0 0;
+    margin: -1% 2% 0 0;
   }
 
   .col3 .horiz-item {
     float: left;
     width: 48%;
-    margin: 0 0 0 1%;
+    margin: 0 0 0 0;
   }
 
   .stripe {
@@ -375,7 +379,7 @@ a {
   }
 
   .item-label p {
-    font-size: .7em;
+    font-size: .8em;
   }
 
   .article {
@@ -392,11 +396,11 @@ a {
   .portfolio-item {
     background-color: #fffdfa;
   }
-  .item-info {
-    font-size: .8em;
-  }
-  .item-info a:nth-child(2) {
+  .item-info a:last-child {
     display: none;
+  }
+  .item-info {
+    font-size: .9em;
   }
 
 }
