--- a/css/styles.css
+++ b/css/styles.css
@@ -24,8 +24,8 @@ Parchment: #fefcf7;
 .nav {
   overflow: auto;
   padding: 1%;
-  margin: 0 0 140px 0;
-  width: 100%;
+  margin: 5px auto 140px auto;
+  width: 90%;
   font-family: Gill Sans / Gill Sans MT, sans-serif;
   text-transform: uppercase;
   background-color: #fffdfa;
@@ -86,9 +86,6 @@ h3 {
   width: 100%;
   height: 720px;
   margin-bottom: 50px;
-  background-image: url("../images/delftpattern.jpg");
-  background-repeat: repeat;
-  border-bottom: 20px solid #242d33;
 }
 
 .articles-main a {
