--- a/css/styles.css
+++ b/css/styles.css
@@ -24,13 +24,13 @@ Parchment: #fefcf7;
 .nav {
   overflow: auto;
   padding: 1%;
-  margin: 5px auto 140px auto;
-  width: 90%;
+  margin: 0 auto 140px auto;
+  width: 100%;
   font-family: Gill Sans / Gill Sans MT, sans-serif;
   text-transform: uppercase;
   background-color: #fffdfa;
   color: #242d33;
-  border: 1px solid #242d33;
+  border-bottom: 1px solid #242d33;
 }
 
 .title {
@@ -82,12 +82,6 @@ h3 {
   font-weight: normal;
 }
 
-.hero-container {
-  width: 100%;
-  height: 720px;
-  margin-bottom: 50px;
-}
-
 .articles-main a {
   font-size: 1em;
   font-family: 'Vollkorn Regular', sans-serif;
@@ -128,12 +122,28 @@ a {
   width: 100%;
 }
 
+.hero-container {
+  width: 100%;
+  height: 720px;
+  margin-bottom: 50px;
+  margin-top: 0;
+  background-color: #e5e3e1;
+}
+
 .masthead {
-  width: 50%;
   padding: 30px;
   text-align: center;
   margin: 0 auto;
-  background-color: #fffdfa;
+  color: #fffdfa;
+}
+
+.masthead h1 {
+  font-size: 8.5em;
+  line-height: 1em;
+}
+
+.masthead h2 {
+  color: #242d33;
 }
 
 #main-logo {
@@ -363,6 +373,21 @@ a {
 @media screen and (max-width:580px) {
   .masthead {
     width: 90%;
+    text-align: center;
+    overflow: hidden;
+  }
+
+  .masthead h1 {
+    display: none;
+  }
+
+  .masthead::before {
+    content: "JG";
+    width: 60%;
+    margin: 0 auto;
+    display: table;
+    font-size: 10em;
+    font-family: 'Vollkorn Regular', sans-serif;
   }
   .col {
     float: none;
@@ -376,7 +401,7 @@ a {
   .nav {
     border: 0;
     background-color: rgba(255, 0, 0, 0);
-    margin-bottom: 50px;
+    margin: 0 auto;
   }
 
   .navlinks {
