--- a/css/styles.css
+++ b/css/styles.css
@@ -9,10 +9,6 @@
   min-height: 200px;
 }
 
-.portfolio-item {
-  /*background-color: #febaef;*/
-  /*background-color: #cc0639;*/
-}
 /* colors
 Darkest Blue: #242d33;
 Parchment: #fefcf7;
@@ -29,18 +25,22 @@ Parchment: #fefcf7;
   font-family: Gill Sans / Gill Sans MT, sans-serif;
   text-transform: uppercase;
   background-color: #fffdfa;
-  color: #242d33;
   border-bottom: 1px solid #242d33;
 }
 
 .title {
   float: left;
+  color: #666564;
 }
 
 .navlinks {
   float: right;
   margin: 0;
   padding: 0;
+}
+
+.navlinks a {
+  color: #666564;
 }
 
 .navlinks li {
@@ -70,7 +70,7 @@ h2 {
   font-family: Gill Sans / Gill Sans MT, sans-serif;
   text-transform: uppercase;
   font-weight: normal;
-  font-size: .75em;
+  font-size: .85em;
   letter-spacing: 1px;
 }
 
@@ -96,7 +96,7 @@ h3 {
   font-style: italic;
 }
 
-a {
+.portfolio-gallery a {
   color: #363636;
 }
 
@@ -213,7 +213,7 @@ a {
   height: 60px;
   background-color: #242d33;
   border-top: 3px solid #fff;
-  color: #fff;
+  color: #fffdfa;
   opacity: 1;
   padding: 7px 5px 5px 10px;
 }
@@ -317,6 +317,10 @@ a {
 /* Media Queries */
 /* media query for all screens that are smaller than laptops */
 @media screen and (max-width: 976px) {
+  .masthead h1 {
+    font-size: 6em;
+  }
+
   .portfolio-item {
     opacity: 1;
   }
@@ -409,8 +413,9 @@ a {
     text-align: center;
   }
 
-  .navlinks a {
+  .nav a {
     text-decoration: none;
+    color: #b2b1af;
   }
 
   .navlinks li {
