--- a/css/styles.css
+++ b/css/styles.css
@@ -22,6 +22,8 @@ Parchment: #fefcf7;
   padding: 1%;
   margin: 0 auto 140px auto;
   width: 100%;
+  position: fixed;
+  z-index: 1;
   font-family: Gill Sans / Gill Sans MT, sans-serif;
   text-transform: uppercase;
   background-color: #fffdfa;
@@ -104,6 +106,7 @@ h3 {
   width: 90%;
   margin: auto;
   padding: 0 2% 2% 2%;
+  background-color: #fff;
 }
 
 .caps {
@@ -128,13 +131,17 @@ h3 {
   margin-bottom: 50px;
   margin-top: 0;
   background-color: #e5e3e1;
+  z-index: -10;
 }
 
 .masthead {
   padding: 30px;
   text-align: center;
-  margin: 0 auto;
+  margin: 100px auto;
   color: #fffdfa;
+  position: fixed;
+  width: 100%;
+  z-index: 0;
 }
 
 .masthead h1 {
@@ -167,8 +174,15 @@ h3 {
 
 /* Gallery */
 
+.portfolio-container {
+  background-color: #fffdfa;
+  position: relative;
+  z-index: 10;
+}
+
 .portfolio-gallery {
-  margin-top: 10px;
+  margin-top: -50px;
+  padding-top: 50px;
   font-family: Gill Sans / Gill Sans MT, sans-serif;
 }
 
