--- a/css/styles.css
+++ b/css/styles.css
@@ -303,7 +303,7 @@ h3 {
 
 #contact {
   border-top: 2px solid #242d33;
-  background-color: #c7baaa;
+  background-color: #f3f3f2;
   padding: 30px 0;
   position: relative;
 }
